# reelcribe

./: LICENSE  README.md  pyproject.toml  requirements.txt
reelcribe/: __init__.py  audio.py  cli.py  images_cli.py  llm.py  reels_text_zones.py  reels_thumb_cli.py  social_images.py  thumb_advise.py  thumb_advise_cli.py  transcription.py
tests/: test_aspect_ratios.py  test_audio.py  test_cli.py  test_images_cli.py  test_llm.py  test_reels_text_zones.py  test_reels_thumb_cli.py  test_social_images.py  test_thumb_advise.py  test_transcription.py
