[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reelcribe"
version = "0.1.0"
description = "Extract audio, transcribe, and generate AI titles from short videos – fully local."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openai-whisper",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[project.scripts]
reelcribe = "reelcribe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reelcribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
