[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reelcribe"
version = "0.1.0"
description = "Extract audio, transcribe with Whisper, optional Ollama titles for short videos (local)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20231117",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[project.scripts]
reelcribe = "reelcribe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reelcribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
